alpha: all requested functional are work

--- a/css/main.css
+++ b/css/main.css
@@ -62,3 +62,31 @@ button:hover{
   color: white;
   border: solid 1px grey;
 }
+
+[data-tooltip] {
+    position: relative; /* Относительное позиционирование */ 
+}
+[data-tooltip]::after {
+    content: attr(data-tooltip); /* Выводим текст */
+    position: absolute; /* Абсолютное позиционирование */
+    width: 150px; /* Ширина подсказки */
+    left: 0; top: 0; /* Положение подсказки */
+    background: #1f1f1f;/*#3989c9;*/ /* Синий цвет фона */
+    color: #fff; /* Цвет текста */
+    padding: 0.5em; /* Поля вокруг текста */
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Параметры тени */
+    pointer-events: none; /* Подсказка */
+    opacity: 0; /* Подсказка невидима */
+    transition: 0.5s; /* Время появления подсказки */
+} 
+[data-tooltip]:hover::after {
+    opacity: 1; /* Показываем подсказку */
+    top: 2em; /* Положение подсказки */
+}
+
+[contenteditable] {
+    padding: 0px 2px;
+    background: white;
+    border: 1px solid lightgrey;
+    overflow-x: hidden;
+}
