--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
 .popupHidden {
     display: none;
 }
+
 ul {
     list-style-type: none;
     padding: 0px;
@@ -43,6 +44,8 @@ ul {
     display: flex;
     justify-content: space-between;
 }
+
+
 .noteRow {
     height: 20px;
     margin: 10px 0px;
@@ -89,4 +92,8 @@ button:hover{
     background: white;
     border: 1px solid lightgrey;
     overflow-x: hidden;
+}
+
+.archiveRecordsShow {
+    background-color: black;
 }
